--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "concurrently": "^3.5.0",
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
+    "nodemon": "^1.12.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
+    "reselect": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "./node_modules/.bin/concurrently --raw \"npm run start-server\" \"npm run start-client\"",
+    "start-client": "react-scripts start",
+    "start-server": "./node_modules/.bin/nodemon --watch src/server.js src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
